# Solution_Architect

./: .gitignore  Makefile  README.md  docker-compose.yml  render.yaml
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/migrations/: env.py
backend/migrations/versions/: 0001_baseline.py  0002_identity_projects_rls.py  0003_intake_llm.py  0004_artifacts.py  0005_run_token_budget.py  0006_mcp_integrations.py
backend/scripts/: smoke.py
backend/src/aisa/artifacts/api/: router.py
backend/src/aisa/artifacts/application/: ports.py  use_cases.py
backend/src/aisa/artifacts/domain/: models.py
backend/src/aisa/artifacts/infrastructure/: repository.py  tables.py
backend/src/aisa/blueprint/api/: router.py
backend/src/aisa/blueprint/application/: agents.py  executor.py  graph.py  use_cases.py
backend/src/aisa/blueprint/domain/: ddl.py  dependencies.py  schemas.py  validators.py
backend/src/aisa/blueprint/prompts/: api_designer_v1.md  cost_estimator_v1.md  data_modeler_v1.md  design_reviewer_v1.md  diagram_generator_v1.md  docs_writer_v1.md  solution_designer_v1.md  tech_stack_recommender_v1.md
backend/src/aisa/exports/api/: router.py
backend/src/aisa/exports/application/: build_export.py
backend/src/aisa/exports/domain/: bundle.py  render.py
backend/src/aisa/identity/api/: auth_router.py  workspace_router.py
backend/src/aisa/identity/application/: actor.py  auth_use_cases.py  ports.py  tokens.py  workspace_use_cases.py
backend/src/aisa/identity/domain/: models.py
backend/src/aisa/identity/infrastructure/: repositories.py  security.py  tables.py
backend/src/aisa/platform/: app.py  audit.py  container.py  middleware.py  problem.py  worker.py
backend/src/aisa/shared/: audit.py  authz.py  config.py  db.py  errors.py  ids.py  logging.py  metrics.py  telemetry.py
backend/tests/: conftest.py  fakes.py  helpers.py
backend/tests/component/: conftest.py  test_api_walking_skeleton.py  test_blueprint_flow.py  test_export_flow.py  test_identity_projects_api.py  test_intake_flow.py  test_metering_api.py  test_provisioning_flow.py  test_rls.py
backend/tests/unit/: test_authz.py  test_blueprint_graph.py  test_blueprint_validators.py  test_config_dsn.py  test_exports_render.py  test_gemini_provider.py  test_http_mcp_client.py  test_integrations.py  test_llm_service.py  test_metering.py  test_metrics.py  test_project_domain.py  test_requirements_analyst.py  test_run_state.py  test_tokens.py  test_tracing.py  test_use_cases.py
docs/: 01-prd.md  (+15 more)
(+91 files in other folders)
