[project]
name = "aisa-backend"
version = "0.1.0"
description = "AI Solution Architect — backend (api + worker)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "redis>=5.2",
    "structlog>=24.4",
    "python-ulid>=3.0",
    "argon2-cffi>=23.1",
    "pyjwt>=2.10",
    "email-validator>=2.2",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.28",
    "mypy>=1.13",
    "ruff>=0.8",
    "import-linter>=2.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aisa"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "TID", "RUF"]

[tool.mypy]
strict = true
python_version = "3.12"
mypy_path = "src"
packages = ["aisa"]
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.importlinter]
root_package = "aisa"
include_external_packages = true

[[tool.importlinter.contracts]]
name = "Feature modules are independent"
type = "independence"
modules = ["aisa.identity", "aisa.orchestration", "aisa.projects"]
# Feature API routers may use the platform's HTTP-edge dependencies; the
# composition root (container) is the one sanctioned meeting point, so the
# deps -> container edge is excluded from transitive independence analysis.
ignore_imports = ["aisa.platform.api.deps -> aisa.platform.container"]

[[tool.importlinter.contracts]]
name = "Shared kernel imports no feature modules"
type = "forbidden"
source_modules = ["aisa.shared"]
forbidden_modules = ["aisa.identity", "aisa.orchestration", "aisa.projects", "aisa.platform"]

[[tool.importlinter.contracts]]
name = "Module layering (api/infra -> application -> domain)"
type = "layers"
layers = ["api", "infrastructure", "application", "domain"]
containers = ["aisa.orchestration", "aisa.identity", "aisa.projects"]

[[tool.importlinter.contracts]]
name = "Domain layers are framework-free"
type = "forbidden"
source_modules = ["aisa.orchestration.domain", "aisa.identity.domain", "aisa.projects.domain"]
forbidden_modules = ["fastapi", "sqlalchemy", "redis", "alembic", "pydantic_settings"]
